Fix alignment in passport

--- a/css/style.css
+++ b/css/style.css
@@ -505,25 +505,41 @@ span.dot {
   margin-bottom: 32px;
 }
 
-
-.callout {
-  margin:0 auto;
-  height:500px;
-  width:352px;
-  font-weight:500;
-  background-image: url("../img/resume/borders/gradient.svg");
-  background-repeat: no-repeat;
-  margin-bottom:36px;
+.passport {
+  display: flex;
+  justify-content: center;
+  margin:12px;
+  max-width: 352px;
+  padding: 4px;
+  background: linear-gradient(to right, #00B0ED, #00CFBD);
 }
 
+@media (max-width: 992px) {
+  .passport {
+    max-width: 280px;
+    margin:16px;
+     }
+  }
 
-.callout p {
+@media (max-width: 767px) {
+  .passport {
+    max-width: 352px;
+  }
+}
+
+.passport p {
   font-size: 12px;
   line-height: 16px;
   color:#fff;
   text-align:center;
   padding:48px 24px;
 }
+
+
+.pass-container {
+  background: #0D203F;
+}
+
 
 .flag {
   margin:0 auto;
